# tdt4259-individual-assignment

./: .gitignore  README.md  design-doc.md  generate-pdf.js  one-pager.md  package-lock.json  package.json
playground/: credit_card_fraud_detection.ipynb  pyproject.toml
