[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Petr Janik <peta.janik@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
notebook = "^7.0.6"
kaleido = "0.2.1"
pycaret = "^3.1.0"
pandas = ">=1.3.0,<2.0.0"
scikit-learn = ">=1.0,<1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
